Bug 8454 - xdbedizzy is segfaulting
Summary: xdbedizzy is segfaulting
Status: RESOLVED FIXED
Alias: None
Product: xorg
Classification: Unclassified
Component: App/other (show other bugs)
Version: git
Hardware: x86 (IA32) Linux (All)
: medium major
Assignee: Xorg Project Team
QA Contact:
URL:
Whiteboard:
Keywords:
: 7964 (view as bug list)
Depends on:
Blocks:
 
Reported: 2006-09-28 20:34 UTC by Jeff Smith
Modified: 2008-06-16 12:16 UTC (History)
1 user (show)

See Also:
i915 platform:
i915 features:


Attachments
Correct the placement of an #endif (377 bytes, patch)
2006-09-28 20:41 UTC, Jeff Smith
no flags Details | Splinter Review

Description Jeff Smith 2006-09-28 20:34:29 UTC
xdbedizzy is hitting a segmentation fault on startup in all cases except when
called with option -help.
Comment 1 Jeff Smith 2006-09-28 20:41:09 UTC
Created attachment 7181 [details] [review]
Correct the placement of an #endif
Comment 2 Alan Coopersmith 2006-09-29 14:34:21 UTC
Good catch!   Thanks for the patch - committed to git head:

commit 7f001cc4d10862204ce231ee13b7322f6b3187b7
Author: Jeff Smith <whydoubt@yahoo.com>
Date:   Fri Sep 29 14:32:40 2006 -0700

    X.Org bug #8454: xdbedizzy is segfaulting if built without Xprint support

    X.Org Bug #8454 <https://bugs.freedesktop.org/show_bug.cgi?id=8454>
    Patch #7181 <https://bugs.freedesktop.org/attachment.cgi?id=7181>
Comment 3 Alan Coopersmith 2008-06-11 17:54:55 UTC
*** Bug 7964 has been marked as a duplicate of this bug. ***
Comment 4 Alan Coopersmith 2008-06-16 12:16:50 UTC
*** Bug 7964 has been marked as a duplicate of this bug. ***


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.