X.Org bug #8454: xdbedizzy is segfaulting if built without Xprint support

X.Org Bug #8454 <https://bugs.freedesktop.org/show_bug.cgi?id=8454>
Patch #7181 <https://bugs.freedesktop.org/attachment.cgi?id=7181>